# xfoil-python

./: CMakeLists.txt  XFoil.cpp  XFoil.h  xfoil.cpp
jupyter/: xfoil_tests.ipynb
